--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
@@ -1,9 +1,29 @@
 ﻿@page "/"
 
-<div class="panel main">
+@using RuneGlossary.Api
+@using STrain
 
+@inject IRequestSender RequestSender;
+
+<div class="panel main">
+    <div class="panel character">
+        <div class="panel character-data">
+
+        </div>
+        <div class="panel rune-list">
+            @foreach (var rune in Runes)
+            {
+                @rune.Name;  
+            }
+        </div>
+    </div>
 </div>
 
 @code {
+    public IEnumerable<GetRunesQuery.Rune> Runes{ get; set; }
 
+    protected override async Task OnInitializedAsync()
+    {
+        Runes = await RequestSender.GetAsync<GetRunesQuery, IEnumerable<GetRunesQuery.Rune>>(new GetRunesQuery(), default) ?? new List<GetRunesQuery.Rune>();
+    }
 }
