--- a/src/RuneGlossary.Client.WASM/Shared/MainLayout.razor.css
+++ b/src/RuneGlossary.Client.WASM/Shared/MainLayout.razor.css
@@ -2,10 +2,18 @@
     position: relative;
     display: flex;
     flex-direction: column;
+
+    height: 100%;
 }
 
 main {
     flex: 1;
+
+    height: 100%
+}
+
+.article {
+    height: 100%;
 }
 
 .sidebar {
@@ -72,10 +80,5 @@ main {
         flex: 1;
         text-align: right;
         width: 0;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
     }
 }
