--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -26,8 +26,6 @@
 }
 
 .character-data {
-    background-color: black;
-
     margin: 4px;
 
     height: 45%;
@@ -35,10 +33,17 @@
 }
 
 .rune-list {
-    background-color: black;
+    margin: 4px;
+    padding: 4px;
+
+    height: fit-content;
+    width: auto;
+
+    column-count: 3;
+}
+
+.selector {
+    display: flex;
 
     margin: 4px;
-
-    height: 45%;
-    width: auto;
 }
