--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -22,13 +22,17 @@
     border-radius: 5px;
 
     width: 33%;
+    height: 100%;
 
+    display: flex;
+    flex-flow: column;
 }
 
 .character-data {
     margin: 4px;
 
-    height: 45%;
+    flex: 0 1 auto;
+
     width: auto;
 }
 
@@ -40,6 +44,8 @@
     width: auto;
 
     column-count: 3;
+
+    flex: 1 1 content;
 }
 
 .selector {
