--- a/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
+++ b/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
@@ -1,7 +1,14 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-
+﻿
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+    height: 100%;
+
+    overflow: hidden;
+}
+
+#app {
+    height: 100%;
 }
 
 h1:focus {
@@ -19,7 +26,7 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    height: 100%;
 }
 
 .valid.modified:not([type=checkbox]) {
