Implemented add new character

--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
@@ -1,11 +1,15 @@
 ﻿@page "/"
 
+@using Blazored.Modal
+@using Blazored.Modal.Services
 @using RuneGlossary.Api
 @using RuneGlossary.Client.WASM.Components
+@using RuneGlossary.Client.WASM.Modals
 @using RuneGlossary.Client.WASM.Models
 @using RuneGlossary.Client.WASM.Repositories
 @using STrain
 
+@inject IModalService ModalService;
 @inject IRequestSender RequestSender;
 @inject ICharacterRepository Repository;
 
@@ -13,18 +17,21 @@
     <div class="panel character">
         <div class="character-data">
             <div class="class">
-                <button class="previous" @onclick="Previous">@("<")</button>
-                <img class="class" src="assets/classes/@(Characters[Selected].Class.Name.ToLower()).gif" />
-                <button class="next" @onclick="Next">@(">")</button>
+                @if (Character is not null)
+                {
+                    <button class="previous" @onclick="Previous">@("<")</button>
+                    <img class="class" src="assets/classes/@(Character?.Class.Name.ToLower()).gif" />
+                    <button class="next" @onclick="Next">@(">")</button>
+                }
             </div>
             <div class="character-information">
                 <div class="field">
                     <span>Name:</span>
-                    <span>@Characters[Selected].Name</span>
+                    <span>@Character?.Name</span>
                 </div>
                 <div class="field">
                     <span>Level:</span>
-                    <span>@Characters[Selected].Level</span>
+                    <span>@Character?.Level</span>
                 </div>
             </div>
         </div>
@@ -37,48 +44,61 @@
                 </div>
             }
         </div>
+        <div>
+            <button @onclick="AddNewAsync">New</button>
+        </div>
     </div>
 </div>
 
 @code {
-    public IList<Character> Characters { get; set; } = new List<Character>
-    {
-        new Character(0, new Api.Responses.Class(0, "Amazon"), "Amazon-Name", 1),
-        new Character(1, new Api.Responses.Class(1, "Assassin"), "Asssassin-Name", 2),
-        new Character(2, new Api.Responses.Class(2, "Barbarian"), "Barbarian-Name", 3),
-        new Character(3, new Api.Responses.Class(3, "Necromancer"), "Necromancer-Name", 4),
-        new Character(4, new Api.Responses.Class(4, "Paladin"), "Paladin-Name", 5),
-        new Character(5, new Api.Responses.Class(5, "Druid"), "Druid-Name", 6),
-        new Character(6, new Api.Responses.Class(6, "Sorceress"), "Sorceress-Name", 7)
-    };
     private int _selected = 0;
-    public int Selected {
-        get 
-        {
-            return _selected;
-        }
-        set
-        {
-            _selected = value;
-            StateHasChanged();
-        }
-    }
+
+    public Character? Character => Characters?.ElementAtOrDefault(_selected);
+    public IEnumerable<Character>? Characters { get; set; }
+
     public IEnumerable<Selector<Api.Rune>> Runes { get; set; } = Enumerable.Empty<Selector<Api.Rune>>();
 
     protected override async Task OnInitializedAsync()
     {
         Runes = (await RequestSender.GetAsync<GetRunesQuery, IEnumerable<Api.Rune>>(new GetRunesQuery(), default))!
                     .Select(r => new Selector<Api.Rune>(r));
-        Characters = (await Repository.GetAsync(default)).ToList();
+        Characters = await Repository.GetAsync(default);
     }
 
     public void Next()
     {
-        if (Selected < Characters.Count - 1) Selected++;
+        if (Characters is null || (_selected < Characters.Count() - 1))
+        {
+            _selected++;
+            StateHasChanged();
+        }
     }
 
     public void Previous()
     {
-        if (Selected > 0) Selected--;
+        if (_selected > 0) 
+        {
+            _selected--;
+            StateHasChanged();
+        }
+    }
+
+    public async Task AddNewAsync()
+    {
+
+        var id = 0;
+        if (Characters is not null && Characters.Any()) id = Characters.Max(c => c.Id) + 1;
+        var character = new Character(id);
+        var parameters = new ModalParameters()
+                                .Add(nameof(NewCharacterModal.Character), character);
+        var reference = ModalService.Show<NewCharacterModal>(string.Empty, parameters, new ModalOptions { HideHeader = true, DisableBackgroundCancel = true, HideCloseButton = true, Position = ModalPosition.Middle });
+        var result = await reference.Result;
+        if (result.Confirmed)
+        {
+            await Repository.SaveAsync(character, default);
+            Characters = await Repository.GetAsync(default);
+            _selected = Characters.Count() - 1;
+            StateHasChanged();
+        }
     }
 }
