--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor
@@ -20,7 +20,7 @@
                 @if (Character is not null)
                 {
                     <button class="previous" @onclick="Previous">@("<")</button>
-                    <img class="class" src="assets/classes/@(Character?.Class.Name.ToLower()).gif" />
+                    <img class="class" src="assets/classes/@(Character?.Class.Name.ToLower()).png" />
                     <button class="next" @onclick="Next">@(">")</button>
                 }
             </div>
@@ -45,7 +45,8 @@
             }
         </div>
         <div>
-            <button @onclick="AddNewAsync">New</button>
+            <button @onclick="AddAsync">New</button>
+            <button @onclick="DeleteAsync">Delete</button>
         </div>
     </div>
 </div>
@@ -83,21 +84,31 @@
         }
     }
 
-    public async Task AddNewAsync()
+    public async Task AddAsync()
     {
-
         var id = 0;
         if (Characters is not null && Characters.Any()) id = Characters.Max(c => c.Id) + 1;
         var character = new Character(id);
         var parameters = new ModalParameters()
                                 .Add(nameof(NewCharacterModal.Character), character);
         var reference = ModalService.Show<NewCharacterModal>(string.Empty, parameters, new ModalOptions { HideHeader = true, DisableBackgroundCancel = true, HideCloseButton = true, Position = ModalPosition.Middle });
-        var result = await reference.Result;
-        if (result.Confirmed)
+        if ((await reference.Result).Confirmed)
         {
             await Repository.SaveAsync(character, default);
             Characters = await Repository.GetAsync(default);
             _selected = Characters.Count() - 1;
+            StateHasChanged();
+        }
+    }
+
+    public async Task DeleteAsync()
+    {
+        var reference = ModalService.Show<DeleteCharacterModal>("Delete", new ModalParameters().Add(nameof(DeleteCharacterModal.Name), Character.Name), new ModalOptions { Position = ModalPosition.Middle });
+        if ((await reference.Result).Confirmed)
+        {
+            await Repository.DeleteAsync(Character, default);
+            Characters = await Repository.GetAsync(default);
+            _selected = 0;
             StateHasChanged();
         }
     }
