--- a/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
+++ b/src/RuneGlossary.Client.WASM/wwwroot/css/app.css
@@ -2,13 +2,21 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-    height: 100%;
 
-    overflow: hidden;
+    /*overflow: hidden;*/
+}
+
+body {
+    padding: 4px;
+    margin: 0px;
+}
+
+html {
+    height: 100vh;
 }
 
 #app {
-    height: 100%;
+    
 }
 
 h1:focus {
@@ -26,7 +34,6 @@ a, .btn-link {
 }
 
 .content {
-    height: 100%;
 }
 
 .valid.modified:not([type=checkbox]) {
