--- a/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
+++ b/src/RuneGlossary.Client.WASM/Pages/Resurrected.razor.css
@@ -13,16 +13,27 @@ div.filter {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
+
+    justify-content: center;
+    align-content: center;
+
+    display: grid;
+
+    grid-template-areas: 'item-types static';
+    grid-template-columns: min-content max-content;
+
+    padding: 4px;
 }
 
 div.main {
     display: grid;
 
     grid-template-areas:
-        'character filter '
+        'character filter'
         'character result';
     grid-template-columns: 25% auto;
     grid-template-rows: min-content auto;
+    grid-column-gap: 4px;
 
     align-content: center;
 }
@@ -127,9 +138,10 @@ div.button-row {
     grid-area: button-row;
 }
 
-edit-form.character-data {
+form {
     display: inherit;
 
+    grid-template: inherit;
     grid-template-areas: inherit;
     grid-template-rows: inherit;
 }
@@ -140,4 +152,45 @@ span.label {
 
 .value {
     align-self: center;
+}
+
+div.item-types {
+    display: grid;
+
+    grid-template: 'armors weapons';
+    grid-template-columns: max-content max-content;
+
+    grid-area: item-types;
+}
+
+div.weapons {
+    grid-area: weapons;
+
+    column-count: 5;
+    column-fill: auto;
+}
+
+div.armors {
+    grid-area: armors;
+}
+
+div.static {
+    grid-area: static;
+
+    display: grid;
+    grid-template-areas: 
+        'label-max-level max-level max-level max-level'
+        'label-socket from dash to';
+    grid-column-gap: 4px;
+    grid-row-gap: 4px;
+
+    height: max-content;
+}
+
+span.max-level {
+    grid-area: label-max-level;
+}
+
+span.socket {
+    grid-area: label-socket;
 }
